--- a/hello.html
+++ b/hello.html
@@ -1,10 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <title>Hello<title>
-        
+        <title>Hello<title>        
     </head>
     <body>
-        Hello world!
+        <p>Hello world!</p>
     </body>
 </html>
